Coloquei registro na area de adm

--- a/EmpoDelas/Views/Home/Administrador.cshtml
+++ b/EmpoDelas/Views/Home/Administrador.cshtml
@@ -18,6 +18,7 @@
                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Autonomas" asp-action="Create">Cadastro Autonôma</a></li>
                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Afiliacaos" asp-action="Create">Cadastrar Afiliação</a></li>
                 <li><a class="nav-link text-dark" asp-area="" asp-controller="ProdutoServicos" asp-action="Create">Cadastrar<br>  Produto ou Serviço</a></li>
+                <li><a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Registre-se</a></li>
             </ul>
         </div>
         <div class="col">
