Troca de cores botões,organização da página home, cadastro do tproduto

--- a/EmpoDelas/Views/Home/Index.cshtml
+++ b/EmpoDelas/Views/Home/Index.cshtml
@@ -15,31 +15,22 @@
             <img src="~/css/img/banner_empodelas_home.png" />
         </div>
 
-        <section id="secao2" class="container-fluid">
-            <div id="boxDepoimento">
-                <div id="tituloDepo">
-                    <h1>Como funciona?</h1>
-                </div>
-                <div id="textoDepo">
-                    <p>
-                        Criamos o site "EmpoDelas" com o intuito de gerar uma rede de apoio entre as mulheres do bairro de Três Carneiros, Ibura - Recife/PE (empreendedoras ou não), para que elas possam divulgar seus produtos e serviços, facilitando a movimentação do comércio e  gerando novas oportunidades para outras mulheres que estão sem fonte de renda no momento atual.
-                    </p>
-                </div>
-            </div>
-        </section>
+       
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <p class="lead">Feito para as mulheres de:</p>
-                <h1 class="display-3">Ibura - Três Carneiros, Recife.</h1>
+                <h1 class="display-5">Ibura - Três Carneiros, Recife.</h1>
+                 <h3>Como funciona?</h3>
+                <p>
+                    Criamos o site "EmpoDelas" com o intuito de gerar uma rede de apoio entre as mulheres do bairro de Três Carneiros, Ibura - Recife/PE (empreendedoras ou não), para que elas possam divulgar seus produtos e serviços, facilitando a movimentação do comércio e  gerando novas oportunidades para outras mulheres que estão sem fonte de renda no momento atual.
+                </p>
             </div>
+           
         </div>
        
-        <div>
+               <div id="fraseMain" class="container-fluid">
             <h1 class="sobrenos">Nada mais forte do que uma mulher que se empodera!<br> Seja uma "EmpoDelas"</h1>
-            <hr>
-        </div>
-        <div id="fraseMain" class="container-fluid">
-            <h3 class="textoConvite">GOSTARIA DE PARTICIPAR DESSE PROJETO? FAÇA O PRÉ-CADASTRO</h3>
+            <h3 class="textoConvite"><strong>GOSTARIA DE PARTICIPAR DESSE PROJETO? FAÇA O PRÉ-CADASTRO!</strong></h3>
             <button type="button" id="bt1" class="btn btn-danger"><a asp-area="" asp-controller="Autonomas" asp-action="Create">Autônoma</a></button>
             <button type="button" id="bt1" class="btn btn-danger"><a asp-area="" asp-controller="Afiliadas" asp-action="Create">Afiliada</a></button>
         </div>
