--- a/EmpoDelas/Views/ProdutoServicos/Index.cshtml
+++ b/EmpoDelas/Views/ProdutoServicos/Index.cshtml
@@ -44,10 +44,10 @@
                             <p class="card-text"><strong>R$@item.Preco_produtoServico</strong></p>
 
                             <div class="div_botoes">
-                                <button class="btn btn-primary">
+                                <button class="btn btn-secondary">
                                     <a class="a_produtos" asp-action="Details" asp-route-id="@item.Id_produtoServico">Ver Mais</a>
                                 </button>
-                                <button class="btn btn-success">
+                                <button class="btn btn-warning">
                                     <a class="a_produtos" asp-action="Contatar" asp-controller="Autonoma" asp-route-id="@item.FK_id_autonoma">Contatar</a>
                                 </button>
                             </div>
