--- a/EmpoDelas/wwwroot/css/login.css
+++ b/EmpoDelas/wwwroot/css/login.css
@@ -1,7 +1,7 @@
 
 #centralizar {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: auto;
     position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -16,5 +16,5 @@
 #fontFormTi {
     font-family: 'Heavitas';
     font-size: 45px;
-    text-align:center;
+    text-align: center;
 }
