--- a/EmpoDelas/wwwroot/css/produto.css
+++ b/EmpoDelas/wwwroot/css/produto.css
@@ -1,13 +1,24 @@
+
+.teste{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .div_botoes{
   display: flex;
+  justify-content: start;
+}
+
+#btn1{
+  margin-right: 10px;
 }
 
 .btn > a {
   color: white;
-}
-
-.btn{
-  margin-right: 2px;
+  text-decoration: none;
 }
 
 .span_item{
@@ -29,14 +40,8 @@
   
   .card{
     margin: 10px;
-  }
-
-  .d-flex{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    width: 300px;
+    height: 500px;
   }
 
   .a_produtos{
@@ -50,42 +55,6 @@
     color: white;
     text-shadow: 0px 0px 10px rgb(61, 0, 0);
   }
-  
-  #secao1Produto{
-    padding-top: 2px;
-    height: 400px;
-    background-image: url('./img/trescaneiros-ibura-deCima.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
-  }
-  
-  #boxInternoCards{
-    height: 600px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  
-  #card{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 220px;
-    height: 250px;
-    flex-direction: column;
-    margin: 0px 10px;
-    background-color: #FFDE59;
-  }
-  
-  #tituloCards{
-    height: 250px;
-    justify-content: center;
-    align-items: center;
-    padding: 60px 60px 0px 60px;
-    text-align: center;
-  }
 
   .card-body img{
     width: 100%;
@@ -96,36 +65,9 @@
 
   .img1{
     width: 100%;
-    height: 300px;
+    height: 270px;
   }
-
-  
-  .col img{
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
 
   .card-title{
-    font-size: 20pt;
-  }
-  
-  #img-Card{
-    width: 190px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  #img-Card img{
-    width: 180px;
-  }
-  
-  .tituloCard{
-    width: 80%;
-    text-align: center;
-    margin: 15px 0px;
-    background-color: #FFDE59;
+    font-size: 15pt;
   }
