--- a/EmpoDelas/Views/Home/Index.cshtml
+++ b/EmpoDelas/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         </div>
 
        
-        <div class="jumbotron jumbotron-fluid div-tres-carneiros">
+        <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <p class="lead">Feito para as mulheres de:</p>
                 <h1 class="ibura">Ibura - Três Carneiros, Recife.</h1>
